# GPU-NTT

./: MESON_USAGE.md  README.md  meson.build  meson.options
example/: CMakeLists.txt  barrett_primes.cpp  meson.build
example/ntt_4step/: test_4step_intt.cu  test_4step_ntt.cu  test_4step_rns_intt.cu  test_4step_rns_ntt.cu  test_cpu_4step_intt.cu  test_cpu_4step_ntt.cu  test_cpu_4step_rns_intt.cu  test_cpu_4step_rns_ntt.cu
example/ntt_merge/: test_cpu_merge_intt.cu  test_cpu_merge_rns_intt.cu  test_cpu_merge_rns_intt_x_n_plus.cu  test_cpu_merge_rns_ntt.cu  test_cpu_merge_rns_ntt_x_n_plus.cu  test_merge_intt.cu  test_merge_ntt.cu  test_merge_rns_intt.cu  test_merge_rns_intt_x_n_plus.cu  test_merge_rns_ntt.cu  test_merge_rns_ntt_x_n_plus.cu
src/: meson.build
src/include/common/: nttparameters.cuh
src/lib/common/: nttparameters.cu
src/lib/ntt_4step/: ntt_4step.cu  ntt_4step_cpu.cu
src/lib/ntt_merge/: ntt.cu  ntt_cpu.cu
